--- a/p8105_hw5_yh3683.md
+++ b/p8105_hw5_yh3683.md
@@ -21,3 +21,38 @@ sizes.
 plot shows that the probability of at least two people sharing a
 birthday increases rapidly with group size, surpassing 50% at around 23
 people, demonstrating the Birthday Paradox.
+
+# Problem 2
+
+    ## Warning in geom_point(linewidth = 3): Ignoring unknown parameters: `linewidth`
+
+![](p8105_hw5_yh3683_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
+
+The plot demonstrates a positive relationship between effect size (μ)
+and statistical power. At small μ values, the test has low power and
+often fails to detect true effects. As μ increases, power rises rapidly
+and approaches 100%, indicating the test becomes increasingly effective
+at detecting larger effects.
+
+    ## 
+    ## 
+    ## Table: Power at different effect sizes
+    ## 
+    ## | True μ|Power  |
+    ## |------:|:------|
+    ## |      0|5.2%   |
+    ## |      1|18.2%  |
+    ## |      2|56.2%  |
+    ## |      3|89.0%  |
+    ## |      4|98.8%  |
+    ## |      5|100.0% |
+    ## |      6|100.0% |
+
+![](p8105_hw5_yh3683_files/figure-gfm/unnamed-chunk-5-1.png)<!-- --> The
+plot shows that the average estimate of μ for all samples (blue) follows
+the true value of μ, while the average estimate for only those samples
+where the null was rejected (red) is consistently higher, particularly
+for small effect sizes. This phenomenon, known as selection bias, occurs
+because rejected samples are more likely to have estimates farther from
+zero, leading to an upward bias in the average estimate for rejected
+tests.
