--- a/p8105_hw5_yh3683.Rmd
+++ b/p8105_hw5_yh3683.Rmd
@@ -160,5 +160,97 @@ print(estimate_plot)
 ```
 The plot shows that the average estimate of μ for all samples (blue) follows the true value of μ, while the average estimate for only those samples where the null was rejected (red) is consistently higher, particularly for small effect sizes. This phenomenon, known as selection bias, occurs because rejected samples are more likely to have estimates farther from zero, leading to an upward bias in the average estimate for rejected tests.
 
+# Problem 3
+```{r echo=FALSE}
+homicide <- read_csv("homicide-data.csv") %>%  
+  janitor::clean_names()
+view(homicide)
+```
+
+The dataset contains information on `r nrow(homicide)`criminal homicides from the past decade across 50 large U.S. cities, with `r ncol(homicide)` columns. It includes details about `r names(homicide)`.
+
+
+```{r echo=TRUE}
+homicide <- homicide %>%
+  mutate(
+    city_state = str_c(city, state, sep = ", "),
+    solved = !(disposition %in% c("Closed without arrest", "Open/No arrest"))
+  )
+
+city_summary <- homicide %>%
+  group_by(city_state) %>%
+  summarize(
+    total_homicides = n(),
+    unsolved_homicides = sum(!solved),
+    .groups = "drop"
+  )
+
+baltimore_data <- city_summary %>%
+  filter(city_state == "Baltimore, MD")
+
+baltimore_test <- prop.test(
+  x = baltimore_data$unsolved_homicides,
+  n = baltimore_data$total_homicides
+)
+
+baltimore_result <- baltimore_test %>%
+  broom::tidy() %>%
+  select(estimate, conf.low, conf.high)
+baltimore_result %>% knitr::kable()
+```
+In Baltimore, approximately 64.6% of homicides remain unsolved (95% CI: 62.8%, 66.3%).
+
+```{r echo=FALSE}
+homicide_analysis <- read_csv("homicide-data.csv") %>%
+  janitor::clean_names() %>%
+  mutate(
+    city_state = str_c(city, state, sep = ", "),
+    solved = disposition != "Closed without arrest" & 
+             disposition != "Open/No arrest"
+  ) %>%
+  # Group by city and summarize
+  group_by(city_state) %>%
+  summarize(
+    total = n(),
+    unsolved = sum(!solved),
+    .groups = "drop"
+  ) %>%
+  # Run prop.test for each city
+  mutate(
+    test_results = map2(unsolved, total, ~prop.test(x = .x, n = .y)),
+    tidy_results = map(test_results, broom::tidy)
+  ) %>%
+  # Unnest results and select relevant columns
+  unnest(tidy_results) %>%
+  select(city_state, total, unsolved, estimate, conf.low, conf.high)
+head(homicide_analysis)
+```
+
+
+```{r echo=FALSE}
+ggplot(
+  homicide_analysis %>% 
+    mutate(city_state = fct_reorder(city_state, estimate)),
+  aes(x = estimate, y = city_state)
+) +
+  geom_point() +
+  geom_errorbar(
+    aes(xmin = conf.low, xmax = conf.high),
+    width = 0.4
+  ) +
+  labs(
+    title = "Proportion of Unsolved Homicides by City",
+    x = "Proportion of Unsolved Homicides",
+    y = "City, State"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.y = element_text(size = 8),
+    plot.title = element_text(hjust = 0.5),
+    panel.grid.major.y = element_line(color = "gray90"),
+    panel.grid.minor = element_blank()
+  )
+```
+
 
 
