--- a/p8105_hw5_yh3683.md
+++ b/p8105_hw5_yh3683.md
@@ -17,8 +17,10 @@ birthday_simulation <- function(n) {
 Run 10,000 simulations for group sizes 2-50, calculate shared birthday
 probability for each size, and plot the probabilities against group
 sizes.
-![](p8105_hw5_yh3683_files/figure-gfm/unnamed-chunk-2-1.png)<!-- --> The
-plot shows that the probability of at least two people sharing a
+
+![](p8105_hw5_yh3683_files/figure-gfm/unnamed-chunk-2-1.png)<!-- -->
+
+The plot shows that the probability of at least two people sharing a
 birthday increases rapidly with group size, surpassing 50% at around 23
 people, demonstrating the Birthday Paradox.
 
@@ -40,22 +42,23 @@ at detecting larger effects.
     ## 
     ## | True μ|Power  |
     ## |------:|:------|
-    ## |      0|5.2%   |
-    ## |      1|18.8%  |
-    ## |      2|56.6%  |
-    ## |      3|89.0%  |
+    ## |      0|5.4%   |
+    ## |      1|19.0%  |
+    ## |      2|56.4%  |
+    ## |      3|88.6%  |
     ## |      4|99.0%  |
-    ## |      5|99.9%  |
+    ## |      5|100.0% |
     ## |      6|100.0% |
 
-![](p8105_hw5_yh3683_files/figure-gfm/unnamed-chunk-5-1.png)<!-- --> The
-plot shows that the average estimate of μ for all samples (blue) follows
-the true value of μ, while the average estimate for only those samples
-where the null was rejected (red) is consistently higher, particularly
-for small effect sizes. This phenomenon, known as selection bias, occurs
-because rejected samples are more likely to have estimates farther from
-zero, leading to an upward bias in the average estimate for rejected
-tests.
+![](p8105_hw5_yh3683_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
+
+The plot shows that the average estimate of μ for all samples (blue)
+follows the true value of μ, while the average estimate for only those
+samples where the null was rejected (red) is consistently higher,
+particularly for small effect sizes. This phenomenon, known as selection
+bias, occurs because rejected samples are more likely to have estimates
+farther from zero, leading to an upward bias in the average estimate for
+rejected tests.
 
 # Problem 3
 
